<resources>
    <string name="app_name">IF-Lanche</string>
    <string name="app_subtitle_login">Entre na sua conta para acessar as novidades</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="enter">Entrar</string>
    <string name="dont_have_account">Não possui uma conta? </string>
    <string name="register_login">Cadastre-se</string>
    <string name="register">Cadastrar</string>
    <string name="app_subtitle_register">Faça seu cadastro para acessar o sistema</string>
    <string name="name">Nome</string>
    <string name="user_type">Tipo de usuário</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="arrow_back_description">Voltar para tela de login</string>
    <string name="drawer_open">Abrir drawer</string>
    <string name="drawer_close">Fechar drawer</string>
    <string name="category_text">Categoria</string>
    <string name="subcategory_text">Subcategoria</string>
    <string name="edit_category_text">Editar</string>
    <string name="remove_category_text">Remover</string>
    <string name="save_category_text">Salvar</string>
    <string name="add_product_image">Imagem do Produto</string>
    <string name="product_description">Descrição</string>
    <string name="product_price">Preço</string>
    <string name="sub_category_text">Subcategoria</string>
    <string name="availability_text">Disponibilidade</string>
</resources>