<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/layout_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screen.fragments.admin.ProductFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="top|center_horizontal"
                android:background="@color/dark_grey"
                android:contentDescription="@string/add_product_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                android:minHeight="20dp"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_product_name_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/product_description"
                android:minHeight="20dp"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_product_description_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/product_price"
                android:minHeight="20dp"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_product_price_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_dropdown_product_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="20dp"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/tf_options_product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_text"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_dropdown_product_sub_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="20dp"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/tf_options_product_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sub_category_text"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_product"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/register"
                android:textColor="@color/red" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />


        </LinearLayout>

    </FrameLayout>
</ScrollView>


