<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.fragments.admin.CategoryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_dropdown_category_select"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:minHeight="20dp"
        android:textColorHint="@color/dark_grey"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/tf_options_category_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_text"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/edit_category_text"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_register_category"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_category_text"
            android:textColor="@color/red" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_add" />

</FrameLayout>